--- a/static/index.html
+++ b/static/index.html
@@ -4,5 +4,7 @@
   </head>
   <body>
     placeholder
+
+    <script type="text/javascript" src="/js/lib/jquery-3.5.1.min.js"></script>
   </body>
 </html>
