--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,14 @@
 <html>
   <head>
     <title>Ipi Radio stations</title>
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css">
   </head>
   <body>
     placeholder
 
-    <script type="text/javascript" src="/js/lib/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="/lib/jquery-ui/jquery-ui.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
   </body>
 </html>
