implemented a basic stations view on the web ui

--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,10 @@
     <link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css">
   </head>
   <body>
-    placeholder
+
+    
+    <div id="stations">
+    </div>
 
     <script type="text/javascript" src="/lib/jquery/jquery-3.5.1.min.js"></script>
     <script type="text/javascript" src="/lib/jquery-ui/jquery-ui.js"></script>
