--- a/static/index.html
+++ b/static/index.html
@@ -6,8 +6,20 @@
   </head>
   <body>
 
-    
-    <div id="stations">
+    <div class="screen-container">
+      <div class="screen screen-left">
+
+        <div id="stations">
+        </div>
+
+      </div>
+      <div class="screen screen-right">
+
+        <div style="text-align: center; padding-top: 200px;">
+          this view will contain <a href="https://api.radio-browser.info/">https://api.radio-browser.info/</a> entries
+        </div>
+
+      </div>
     </div>
 
     <script type="text/javascript" src="/lib/jquery/jquery-3.5.1.min.js"></script>
