added clear all stations button to ui

--- a/static/index.html
+++ b/static/index.html
@@ -11,6 +11,12 @@
 
         <div id="stations">
         </div>
+        <br>
+        <button id="clearAllStations">Delete all stations</button>
+
+        <div id="dialogConfirmClearAllStations" title="Delete all stations?">
+          <p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>this action will immediately clear all stations you have saved<br>are you sure?</p>
+        </div>
 
       </div>
       <div class="screen screen-right">
