added a very simple (custom/placeholder) favicon

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
     <title>Ipi Radio stations</title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css">
+    <link rel="icon" type="image/png" href="/favicon.png"/>
   </head>
   <body>
 
