--- a/static/index.html
+++ b/static/index.html
@@ -1,36 +1,56 @@
 <html>
 	<head>
-		<title>Ipi Radio stations</title>
+		<title>IPi-Radio webUI</title>
 		<link rel="stylesheet" href="/css/main.css">
 		<link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css">
 		<link rel="icon" type="image/png" href="/favicon.png"/>
+		<!-- bootstrap -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	</head>
 	<body>
 
-		<div class="screen-container">
-			<div class="screen screen-left">
-
-				<div id="stations">
+		<div class="container">
+			<h3 style="text-align: center;">IPi-Radio controller</h3>
+			<div class="row">
+				<div class="col-md-10 col-sm-12">
+					<div id="stations"></div>
 				</div>
-				<br>
-				<button id="clearAllStations">Delete all stations</button>
-
-				<div id="dialogConfirmClearAllStations" title="Delete all stations?">
-					<p><span class="ui-icon ui-icon-alert" style="float:left; margin:12px 12px 20px 0;"></span>this action will immediately clear all stations you have saved<br>are you sure?</p>
+				<div class="col-md-2 col-sm-12">
+					<input class="btn btn-success btn-new" id="addNewStation" type="button" value="Add new station" />
+					<!-- <input class="btn btn-danger btn-delete" id="clearAllStations" type="button" value="Delete all stations (OLD)" /> -->
+					<input class="btn btn-danger btn-delete" id="clearAllStationsNew" type="button" value="Delete all stations" />
 				</div>
-
 			</div>
-			<div class="screen screen-right">
 
-				<div style="text-align: center; padding-top: 200px;">
-					this view will contain <a href="https://api.radio-browser.info/">https://api.radio-browser.info/</a> entries
+			<div class="alert alert-danger row" id="clearAllStationsDialog" style="margin-top: 1%; display: none;">
+				<div class="col-md-8 col-sm-12" style="margin-top: 1%;">
+					this action will immediately clear all stations you have saved!
 				</div>
-
+				<div class="col-md-4 col-sm-12" style="text-align: center; margin-top: 1%;">
+					Are you sure?
+					<input class="btn btn-danger btn-confirm" id="clearAllStationsYES" type="button" value="yes" />
+					<input class="btn btn-success btn-confirm" id="clearAllStationsNO" type="button" value="no" />
+				</div>
 			</div>
 		</div>
 
+		<!-- JQuery -->
 		<script type="text/javascript" src="/lib/jquery/jquery-3.5.1.min.js"></script>
 		<script type="text/javascript" src="/lib/jquery-ui/jquery-ui.js"></script>
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+
 		<script type="text/javascript" src="/js/main.js"></script>
+
+		<footer class="footer">
+			<hr style="background-color: grey; height: 1px;">
+			<div class="container">
+				<p class="text-muted">
+					this view will contain <a href="https://api.radio-browser.info/">https://api.radio-browser.info/</a> entries | IPi-Radio webinterface | v»placeholder«
+				</p>
+			</div>
+		</footer>
 	</body>
 </html>
