remove list box

--- a/static/index.html
+++ b/static/index.html
@@ -16,7 +16,7 @@
 			<h3 style="text-align: center;">IPi-Radio controller</h3>
 			<div class="row">
 				<div class="col-md-10 col-sm-12">
-					<div id="stations"></div>
+					<div class="sortable-list" id="stations"></div>
 				</div>
 				<div class="col-md-2 col-sm-12">
 					<input class="btn btn-danger btn-delete" id="clearAllStationsNew" type="button" value="Delete all stations" />
