--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
 		<link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css">
 		<link rel="icon" type="image/png" href="/favicon.png"/>
 		<!-- bootstrap -->
-		<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css"/>
+		<!-- <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css"/> -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/>
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-
+		<meta charset="UTF-8">
 	</head>
 	<body>
 
@@ -19,14 +20,15 @@
 					<div class="sortable-list" id="stations"></div>
 				</div>
 				<div class="col-md-2 col-sm-12">
-					<input class="btn btn-danger btn-delete" id="clearAllStationsNew" type="button" value="Delete all stations" />
-					<input class="btn btn-success btn-new" id="addNewStation" type="button" value="Add new station" />
+					<input class="btn btn-danger btn-right" id="clearAllStationsNew" type="button" value="Delete all stations" />
+					<input class="btn btn-success btn-right" id="addNewStation" type="button" value="Add new station" />
+					<input class="btn btn-info btn-right" id="saveStationOrder" type="button" value="Save" />
 				</div>
 			</div>
 
 			<div class="alert alert-danger row" id="clearAllStationsDialog" style="margin-top: 1%; display: none;">
 				<div class="col-md-8 col-sm-12" style="margin-top: 1%;">
-					this action will immediately clear all stations you have saved!
+					This action will immediately clear all stations you have saved!
 				</div>
 				<div class="col-md-4 col-sm-12" style="text-align: center; margin-top: 1%;">
 					Are you sure?
@@ -34,12 +36,46 @@
 					<input class="btn btn-success btn-confirm" id="clearAllStationsNO" type="button" value="no" />
 				</div>
 			</div>
+
+			<hr style="background-color: grey; height: 1px; width: 80%;">
+
+			<h4 id="newStationFormHead" style="display: none;">Add new radio station:</h4>
+			<div class="input-group mb-3" id="newStationForm" style="display: none;">
+				<div class="input-group-prepend">
+				  <span class="input-group-text">Radio Name</span>
+				</div>
+				<input class="form-control" type="text" id="radioStatioName" placeholder="Radio Station" onkeyup="checkButton(this)" />
+				<input class="btn btn-success add-button" id="addRadioName" type="button" value="search" disabled="true" onclick="searchByName(this)" />
+			</div>
+
+			<div class="list-group" id="resultList">
+				<!-- <button type="button" class="list-group-item list-group-item-action resultItem" disabled>Name | Codec | Bitrate | Country | Language | Clicks</button>> -->
+			</div>
+
+			<!-- 
+				<div class="input-group mb-3">
+					<div class="input-group-prepend">
+						<button class="btn btn-outline-secondary dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</button>
+						<div class="dropdown-menu">
+						<a class="dropdown-item" href="#">Action</a>
+						<a class="dropdown-item" href="#">Another action</a>
+						<a class="dropdown-item" href="#">Something else here</a>
+						<div role="separator" class="dropdown-divider"></div>
+						<a class="dropdown-item" href="#">Separated link</a>
+						</div>
+					</div>
+					<input type="text" class="form-control" aria-label="Text input with dropdown button">
+				</div>
+			 -->
 		</div>
 
 		<!-- JQuery -->
 		<script type="text/javascript" src="/lib/jquery/jquery-3.5.1.min.js"></script>
 		<script type="text/javascript" src="/lib/jquery-ui/jquery-ui.js"></script>
-		<script type="text/javascript" src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<!-- <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script> -->
+
+		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+
 
 		<script type="text/javascript" src="/js/main.js"></script>
 
