make result list invisible at first

--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
 				<input class="btn btn-success add-button" id="addRadioName" type="button" value="search" disabled="true" onclick="searchByName(this)" />
 			</div>
 
-			<div class="list-group" id="resultList">
+			<div class="list-group" id="resultList" style="display: none;">
 				<!-- <button type="button" class="list-group-item list-group-item-action resultItem" disabled>Name | Codec | Bitrate | Country | Language | Clicks</button>> -->
 			</div>
 
