--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
 		<link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css">
 		<link rel="icon" type="image/png" href="/favicon.png"/>
 		<!-- bootstrap -->
-		<!-- <link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css"/> -->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css"/>
+		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/> -->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta charset="UTF-8">
@@ -72,9 +72,8 @@
 		<!-- JQuery -->
 		<script type="text/javascript" src="/lib/jquery/jquery-3.5.1.min.js"></script>
 		<script type="text/javascript" src="/lib/jquery-ui/jquery-ui.js"></script>
-		<!-- <script type="text/javascript" src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script> -->
-
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script type="text/javascript" src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script> -->
 
 
 		<script type="text/javascript" src="/js/main.js"></script>
