--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
 			<h4 id="newStationFormHead" style="display: none;">Add new radio station:</h4>
 			<div class="input-group mb-3" id="newStationForm" style="display: none;">
 				<div class="input-group-prepend">
-				  <span class="input-group-text">Radio Name</span>
+				  <span class="input-group-text">Radio name</span>
 				</div>
 				<input class="form-control" type="text" id="radioStatioName" placeholder="Radio Station" onkeyup="checkButton(this)" />
 				<input class="btn btn-success add-button" id="addRadioName" type="button" value="search" disabled="true" onclick="searchByName(this)" />
