--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 		<title>IPi-Radio webUI</title>
 		<link rel="stylesheet" href="/css/main.css">
 		<link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css">
-		<link rel="icon" type="image/png" href="/favicon.png"/>
+		<link rel="icon" type="image/png" href="/lib/favicon.png"/>
 		<!-- bootstrap -->
 		<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css"/>
 		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/> -->
