update footer and version number

--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
 			<hr style="background-color: grey; height: 1px;">
 			<div class="container">
 				<p class="text-muted">
-					this view will contain <a href="https://api.radio-browser.info/">https://api.radio-browser.info/</a> entries | IPi-Radio webinterface | v»placeholder«
+					this page uses <a href="https://api.radio-browser.info/">https://api.radio-browser.info/</a> for searching new radio stations | IPi-Radio webinterface | v1.0
 				</p>
 			</div>
 		</footer>
