--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 		<title>IPi-Radio webUI</title>
 		<link rel="stylesheet" href="/css/main.css"/>
 		<link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css"/>
-		<link rel="stylesheet" href="/framework/loading.css"/>
-		<link rel="stylesheet" href="/framework/loading-btn.css"/>
+		<link rel="stylesheet" href="/lib/loading.css"/>
+		<link rel="stylesheet" href="/lib/loading-btn.css"/>
 		<link rel="icon" type="image/png" href="/lib/favicon.png"/>
 
 		<!-- bootstrap -->
