--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,8 @@
 		<title>IPi-Radio webUI</title>
 		<link rel="stylesheet" href="/css/main.css"/>
 		<link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css"/>
-		<link rel="stylesheet" href="/lib/loading.css"/>
-		<link rel="stylesheet" href="/lib/loading-btn.css"/>
+		<link rel="stylesheet" href="/css/loading.css"/>
+		<link rel="stylesheet" href="/css/loading-btn.css"/>
 		<link rel="icon" type="image/png" href="/lib/favicon.png"/>
 
 		<!-- bootstrap -->
@@ -50,7 +50,7 @@
 					<span class="input-group-text">Radio name</span>
 					</div>
 					<input class="form-control" type="text" id="radioStatioName" placeholder="Radio Station" onkeyup="checkButton(this)" />
-					<input class="btn btn-success add-button" id="addRadioName" type="button" value="search" disabled="true" onclick="searchByName(this)" />
+					<a class="btn btn-success add-button ld-over" id="addRadioName" type="button" disabled="true" onclick="searchByName(this)">search<span class="ld ld-ring ld-spin"></span></a>
 				</div>
 
 				<div class="list-group" id="resultList">
