--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+		<span id="includeNavbar"></span>
 
 		<div class="container">
 			<h3 style="text-align: center;">IPi-Radio controller</h3>
@@ -81,7 +82,9 @@
 		<script type="text/javascript" src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 		<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script> -->
 
-
+		<script>
+			$("#includeNavbar").load("inc/navbar.html");
+		</script>
 		<script type="text/javascript" src="/js/main.js"></script>
 
 		<footer class="footer">
