--- a/src/index.html
+++ b/src/index.html
@@ -1,20 +1,20 @@
 <html>
 	<head>
 		<title>IPi-Radio webUI</title>
-		<link rel="stylesheet" href="/css/main.css"/>
-		<link rel="stylesheet" href="/lib/jquery-ui/jquery-ui.css"/>
-		<link rel="stylesheet" href="/css/loading.css"/>
-		<link rel="stylesheet" href="/css/loading-btn.css"/>
-		<link rel="icon" type="image/png" href="/lib/favicon.png"/>
+		<link rel="stylesheet" href="css/main.css"/>
+		<link rel="stylesheet" href="lib/jquery-ui/jquery-ui.css"/>
+		<link rel="stylesheet" href="css/loading.css"/>
+		<link rel="stylesheet" href="css/loading-btn.css"/>
+		<link rel="icon" type="image/png" href="lib/favicon.png"/>
 
 		<!-- bootstrap -->
-		<link rel="stylesheet" href="/lib/bootstrap/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css"/>
 		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"/> -->
 
 		<!-- JQuery -->
-		<script type="text/javascript" src="/lib/jquery/jquery-3.5.1.min.js"></script>
-		<script type="text/javascript" src="/lib/jquery-ui/jquery-ui.js"></script>
-		<script type="text/javascript" src="/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script type="text/javascript" src="lib/jquery/jquery-3.5.1.min.js"></script>
+		<script type="text/javascript" src="lib/jquery-ui/jquery-ui.js"></script>
+		<script type="text/javascript" src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
 		<!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script> -->
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
