--- a/src/index.html
+++ b/src/index.html
@@ -82,18 +82,12 @@
 			 -->
 		</div>
 
+		<span id="includeFooter"></span>
+
 		<script>
 			$("#includeNavbar").load("inc/navbar.html");
+			$("#includeFooter").load("inc/footer.html");
 		</script>
 		<script type="text/javascript" src="/js/main.js"></script>
-
-		<footer class="footer">
-			<hr style="background-color: grey; height: 1px;">
-			<div class="container">
-				<p class="text-muted">
-					this page uses <a href="https://api.radio-browser.info/">https://api.radio-browser.info/</a> for searching new radio stations | IPi-Radio webinterface | v1.0
-				</p>
-			</div>
-		</footer>
 	</body>
 </html>
