--- a/src/inc/navbar.html
+++ b/src/inc/navbar.html
@@ -14,7 +14,7 @@
                 <a class="nav-link" href="/">Radio Stations</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="/">Settings</a>
+                <a class="nav-link" href="settings.html">Settings</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
